app/globals.css
@import 'tailwindcss';

@theme {
	--color-text: var(--color-gray-600);
	--color-primary: var(--color-cyan-500);
}

@layer base {
	body > * {
		@apply text-gray-950;
	}
	body {
		overflow-x: hidden;
	}
}

@utility flex-center {
	@apply flex items-center justify-center;
}

@utility col {
	@apply flex flex-col;
}

@utility placeholder-elm {
	@apply uppercase font-black text-cyan-50 tracking-tighter text-3xl;
}

.topic-badge {
	@apply font-black text-base;
}

.splide__track,
.splide__track ul {
	@apply !overflow-visible;
}

